# chdb-rust

./: Cargo.toml
src/: error.rs  lib.rs  query_result.rs  session.rs
src/rowbinary/: mod.rs  ser.rs
tests/: test_examples.rs
