[package]
name = "chdb-rust"
version = "1.0.0"
edition = "2021"
keywords = ["clickhouse", "chdb", "database", "embedded", "analytics"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", tag = "v0.13.2", features = [] }

[build-dependencies]
bindgen = "0.70.1"

[dev-dependencies]
tempdir = "0.3.7"